# rescue-gui

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: Add_wxWidgets.cmake
src/: CMakeLists.txt
src/gui/: CMakeLists.txt  common.h  main.cpp
src/gui/configset/: configset.cpp  configset.fbp  configset.h  configset_ui.cpp  configset_ui.h
src/gui/mainwin/: mainwin.cpp  mainwin.fbp  mainwin.h  mainwin_ui.cpp  mainwin_ui.h
src/gui/res/: resources.c  resources.h
